--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -48,6 +48,7 @@ print-page {
 selection-print-page {
 	position: relative;
   	margin: 0.5rem;
+  	clear: both;
 
   	jcm-card {
   		margin: 0.5rem;
